# test_task_grpc

./: .gitignore  Dockerfile  ProtobufConfig.cmake.template  README.md  build.sh  config.py  conftest.py  docker-compose.yml  entrypoint.sh  pytest.ini  requirements.txt  task.md  test.sh  test_documentation.md  test_report.md
cpp-application/: CMakeLists.txt  main.cpp  monitor.proto
tests/: test_byte_counter.py  test_overflow.py  test_packet_counter.py  test_smoke.py  test_stress.py
